--- a/src/main/resources/resources/index.html
+++ b/src/main/resources/resources/index.html
@@ -24,7 +24,7 @@
     <!-- Modal Content | insert database url in action -->
     <form name="login-form"
           class="modal-content animate"
-          action="http://localhost:8080/check"
+          action="https://jingtian.azurewebsites.net/check"
           method="get"
           onsubmit="return validateForm();">
 
