--- a/src/main/resources/resources/education.html
+++ b/src/main/resources/resources/education.html
@@ -47,7 +47,7 @@
 </div>
 
 <!-- Request Education Info from Web Server -->
-<script src="../js/requestJson.js"></script>
+<script src="../js/getDegrees.js"></script>
 
 </body>
 </html>
