--- a/src/main/resources/resources/home.html
+++ b/src/main/resources/resources/home.html
@@ -3,15 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <title>Home</title>
+    <!-- CSS Styles -->
     <link href='./css/style.css' rel='stylesheet' type="text/css">
+    <!-- CSS Layout with Grid & Flexbox -->
     <link href='./css/layout.css' rel='stylesheet' type="text/css">
+    <!-- Google Fonts "Quicksand" -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-
 <!-- CSS Grid Layout -->
 <div class="grid-container">
 
@@ -25,7 +28,7 @@
             <li><a href="./education.html">Education</a></li>
             <li><a href="./interest.html">Interest</a></li>
             <li><a href="./pet.html">Pet</a></li>
-            <li><a href="./hometown.html">Hometown</a></li>
+            <li><a href="./adoptpet.html">AdoptPet</a></li>
             <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -36,18 +39,30 @@
     </div>
 
     <!-- My Photo -->
-    <aside class="item photo">
-        <img class="photo-img" src="./images/photo.png" alt="hello">
+    <aside class="item info">
+        <p></p>
+        <img src="./images/portrait.png" alt="Portrait">
+        <ul>
+            <li><strong>Name</strong>: &nbsp;Jingtian Zou</li>
+            <li><strong>Birth</strong>: &nbsp;August 16</li>
+            <li><strong>Phone</strong>: &nbsp;(925)557-5177</li>
+            <li><strong>Email</strong>: &nbsp;jtzou@bu.edu</li>
+            <li><strong>Location</strong>: &nbsp;Bay Area, CA</li>
+        </ul>
     </aside>
 
     <!-- About Me Section -->
     <section class="item intro">
-        <h2 class="intro-title">About Me</h2>
-        <p class="intro-p">My name is Jingtian Zou. </p>
-        <p class="intro-p">I studied Economics & Finance both in the undergraduate and graduate periods and then
-            worked in the financial service industry. </p>
-        <p class="intro-p">I'm now taking the MSSD program as I want to lay a solid foundation of programming
-            through this program to well-prepared for the "<strong>Fintech Revolution</strong>".</p>
+        <h2>About Me</h2>
+        <p>Hi! I'm Jingtian Zou. Thank you for visiting my home page!</p>
+        <p>I studied Economics & Finance both in the undergraduate and graduate periods and then
+            worked worked as an Institutional Sales in a leading investment bank in China. </p>
+        <p>I moved to the Bay Area in 2016. Inspired by surrounding environment, I started
+            interested in programming and decided to combine my financial background with programming to
+            explore more possibilities of career development.</p>
+        <p>I'm now taking the MSSD program and <em>CS601 Web Application Development</em> is my 5th
+            course. I hope to lay a solid foundation of programming through this program to well-prepared for the
+            "<strong>Fintech Revolution</strong>".</p>
     </section>
 
     <!-- Footer -->
