--- a/src/main/resources/resources/adoptpet.html
+++ b/src/main/resources/resources/adoptpet.html
@@ -4,9 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Adopt Pet</title>
+    <!-- CSS Styles -->
     <link href='./css/style.css' rel='stylesheet' type="text/css">
+    <!-- CSS Layout with Grid & Flexbox -->
     <link href='./css/layout.css' rel='stylesheet' type="text/css">
-
+    <!-- Google Fonts "Quicksand" -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,10 +23,11 @@
     <!-- Navigation -->
     <nav class="item nav">
         <ul>
-            <li><a href="./home.html" class="active">Home</a></li>
+            <li><a href="./home.html">Home</a></li>
             <li><a href="./education.html">Education</a></li>
             <li><a href="./interest.html">Interest</a></li>
             <li><a href="./pet.html">Pet</a></li>
+            <li><a href="./adoptpet.html" class="active">AdoptPet</a></li>
             <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -38,28 +43,30 @@
         <!-- Pet Raise Section -->
         <div class="raise">
 
-            <div class="cat-container">
-                <img :src="hover1 ? images.kitten : images.cat"
-                     @mouseover="hover1 = true"
-                     @mouseleave="hover1 = false"
-                     alt="cat-kitten">
+            <img :src="hover1 ? images.kitten : images.cat"
+                 @mouseover="hover1 = true"
+                 @mouseleave="hover1 = false"
+                 alt="cat-kitten">
+
+            <div class="tips">
                 <p>{{ title1 }}</p>
                 <ol>
                     <li v-for="tip in tipsForCat">{{ tip }}</li>
                 </ol>
-                <a :href="link.raiseCat" target="_blank">Learn More: How to Raise a Cat</a>
+                <a :href="link.raiseCat" target="_blank">▶ Learn More: How to Raise a Cat</a>
             </div>
 
-            <div class="dog-container">
-                <img :src="hover2 ? images.puppy : images.dog"
-                     @mouseover="hover2 = true"
-                     @mouseleave="hover2 = false"
-                     alt="dog-puppy">
+            <img :src="hover2 ? images.puppy : images.dog"
+                 @mouseover="hover2 = true"
+                 @mouseleave="hover2 = false"
+                 alt="dog-puppy">
+
+            <div class="tips">
                 <p>{{ title2 }}</p>
                 <ol>
                     <li v-for="tip in tipsForDog">{{ tip }}</li>
                 </ol>
-                <a :href="link.raiseDog" target="_blank">Learn More: How to Raise a Dog</a>
+                <a :href="link.raiseDog" target="_blank">▶ Learn More: How to Raise a Dog</a>
             </div>
 
         </div>
