--- a/src/main/resources/resources/contact.html
+++ b/src/main/resources/resources/contact.html
@@ -4,8 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
+    <!-- CSS Styles -->
     <link href='./css/style.css' rel='stylesheet' type="text/css">
+    <!-- CSS Layout with Grid & Flexbox -->
     <link href='./css/layout.css' rel='stylesheet' type="text/css">
+    <!-- Google Fonts "Quicksand" -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500&display=swap" rel="stylesheet">
+    <!-- Pixeden Icon Font Set -->
     <link  href="./pe-icon-7-stroke/css/pe-icon-7-stroke.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -20,12 +26,12 @@
     <!-- Navigation -->
     <nav class="item nav">
         <ul>
-            <li><a href="./home.html" class="active">Home</a></li>
+            <li><a href="./home.html">Home</a></li>
             <li><a href="./education.html">Education</a></li>
             <li><a href="./interest.html">Interest</a></li>
             <li><a href="./pet.html">Pet</a></li>
-            <li><a href="./hometown.html">Hometown</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./adoptpet.html">AdoptPet</a></li>
+            <li><a href="./contact.html" class="active">Contact</a></li>
         </ul>
     </nav>
 
