--- a/src/main/resources/resources/education.html
+++ b/src/main/resources/resources/education.html
@@ -4,8 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Education</title>
+    <!-- CSS Styles -->
     <link href='./css/style.css' rel='stylesheet' type="text/css">
+    <!-- CSS Layout with Grid & Flexbox -->
     <link href='./css/layout.css' rel='stylesheet' type="text/css">
+    <!-- Google Fonts "Quicksand" -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,23 +24,23 @@
     <!-- Navigation -->
     <nav class="item nav">
         <ul>
-            <li><a href="./home.html" class="active">Home</a></li>
-            <li><a href="./education.html">Education</a></li>
+            <li><a href="./home.html">Home</a></li>
+            <li><a href="./education.html" class="active">Education</a></li>
             <li><a href="./interest.html">Interest</a></li>
             <li><a href="./pet.html">Pet</a></li>
-            <li><a href="./hometown.html">Hometown</a></li>
+            <li><a href="./adoptpet.html">AdoptPet</a></li>
             <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
 
     <!-- Separation -->
     <div class="item separation">
-        <img src="./images/hello.jpg" alt="hello">
+        <img src="./images/flower.png" alt="Flower">
     </div>
 
     <!-- Education section -->
     <section class="item edu">
-        <button class="edu-btn" id="button">Click Here To Get My College Degrees</button>
+        <button class="edu-btn" id="button">Click Here To See My College Degrees</button>
         <table class="edu-table" id="table"></table>
     </section>
 
