--- a/src/main/resources/resources/education.html
+++ b/src/main/resources/resources/education.html
@@ -9,8 +9,10 @@
     <!-- CSS Layout with Grid & Flexbox -->
     <link href='./css/layout.css' rel='stylesheet' type="text/css">
     <!-- Google Fonts "Quicksand" -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -43,6 +45,11 @@
         <button class="edu-btn" id="button">Click Here To See My College Degrees</button>
         <table class="edu-table" id="table"></table>
     </section>
+
+    <!-- Bottom Separation -->
+    <div class="item separation-bottom">
+        <img src="./images/flower1.png" alt="Flower1">
+    </div>
 
     <!-- Footer -->
     <footer class="item footer">
