--- a/src/main/resources/resources/index.html
+++ b/src/main/resources/resources/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylesheet" href="./css/login.css">
+    <!-- CSS Styles for Login-->
+    <link rel="stylesheet" href="./css/login.css" type="text/css">
+    <!-- Google Fonts "Quicksand" -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -30,7 +35,7 @@
 
         <div class="img-container">
             <span class="close-btn" onclick="document.getElementById('modal-login').style.display='none'" title="Close Window">&times;</span>
-            <img src="./images/hello.jpg" alt="hello" class="hello">
+            <img src="./images/login.jpg" alt="hello" class="hello">
         </div>
 
         <div class="container">
@@ -49,7 +54,7 @@
             <input type="submit" class="login-btn" value="Login">
         </div>
 
-        <div class="container" style="background-color:#e0dcf3">
+        <div class="container" style="background-color:#bcd8eb">
             <!-- Cancel button -->
             <button class="cancel-btn" onclick="document.getElementById('modal-login').style.display='none'">Cancel</button>
             <span class="psw" onclick="showAnswer()">Forgot password?</span>
