--- a/src/main/resources/resources/education.html
+++ b/src/main/resources/resources/education.html
@@ -12,7 +12,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -36,7 +35,7 @@
     </nav>
 
     <!-- Separation -->
-    <div class="item separation">
+    <div class="item separation-top">
         <img src="./images/flower.png" alt="Flower">
     </div>
 
@@ -59,7 +58,7 @@
 </div>
 
 <!-- Request Education Info from Web Server -->
-<script src="../js/getDegrees.js"></script>
+<script src="./js/getDegrees.js"></script>
 
 </body>
 </html>
