--- a/src/main/resources/resources/home.html
+++ b/src/main/resources/resources/home.html
@@ -63,7 +63,7 @@
             explore more possibilities of career development.</p>
         <p>I'm now taking the MSSD program and <em>CS601 Web Application Development</em> is my 5th
             course. I hope to lay a solid foundation of programming through this program to well-prepared for the
-            "<strong>Fintech Revolution</strong>".</p>
+            "Fintech Revolution".</p>
     </section>
 
     <!-- Footer -->
