--- a/src/main/resources/resources/pet.html
+++ b/src/main/resources/resources/pet.html
@@ -48,8 +48,8 @@
             <li><strong>Favorite</strong>: &nbsp;Salmon & Tuna</li>
         </ul>
         <p> Ziye was three-month old and looked helpless when I first saw her in shelter, so I adopted her and treated
-            her as my family. She was a troublemaker rather than a docile pet when she was young. When she grown up,
-            she became a warm sensible girl, and she always dragged her favorite toys to share with me. </p>
+            her as my family. She was a troublemaker rather than a docile pet when she was young. When grown up,
+            she became a warm sensible girl, and she always shared her favorite toys with me. </p>
     </section>
 
     <!-- Ziye Image Section -->
