--- a/src/main/resources/resources/adoptpet.html
+++ b/src/main/resources/resources/adoptpet.html
@@ -44,10 +44,12 @@
         <!-- Pet Raise Section -->
         <div class="raise">
 
-            <img :src="hover1 ? images.kitten : images.cat"
-                 @mouseover="hover1 = true"
-                 @mouseleave="hover1 = false"
-                 alt="cat-kitten">
+            <div class="raise-img">
+                <img :src="hover1 ? images.kitten : images.cat"
+                     @mouseover="hover1 = true"
+                     @mouseleave="hover1 = false"
+                     alt="cat-kitten">
+            </div>
 
             <div class="tips">
                 <p>{{ title1 }}</p>
@@ -57,10 +59,12 @@
                 <a :href="link.raiseCat" target="_blank">▶ Learn More: How to Raise a Cat</a>
             </div>
 
-            <img :src="hover2 ? images.puppy : images.dog"
-                 @mouseover="hover2 = true"
-                 @mouseleave="hover2 = false"
-                 alt="dog-puppy">
+            <div class="raise-img">
+                <img :src="hover2 ? images.puppy : images.dog"
+                     @mouseover="hover2 = true"
+                     @mouseleave="hover2 = false"
+                     alt="dog-puppy">
+            </div>
 
             <div class="tips">
                 <p>{{ title2 }}</p>
