--- a/src/main/resources/resources/contact.html
+++ b/src/main/resources/resources/contact.html
@@ -98,8 +98,8 @@
                 </div>
 
                 <div class="form-item">
-                    <label for="checkBox">How would you like to be contacted? </label>
-                    <div class="checkBox" id="checkBox">
+                    <label>How would you like to be contacted? </label>
+                    <div class="checkBox">
                         <input type="checkbox" id="contact1" name="contact" value="email">
                         <label for="contact1">Email</label>
                         <input type="checkbox" id="contact2" name="contact" value="message">
@@ -110,8 +110,8 @@
                 </div>
 
                 <div class="form-item">
-                    <label for="show">Do you want to show your message on this page? </label>
-                    <div class="show" id="show">
+                    <label>Do you want to show your message on this page? </label>
+                    <div class="show">
                         <input type="radio" id="yes" name="showmsg" value="yes">
                         <label for="yes">Yes</label>
                         <input type="radio" id="no" name="showmsg" value="no">
